--- a/어드민관리/admin_account.html
+++ b/어드민관리/admin_account.html
@@ -126,8 +126,8 @@
 						</div>
 						<div class="c_cont">
 							<div class="item"> 
-								<p><button class="btn_arr" type="button"><strong class="fs_sm">◀</strong></button><br>추가</p>
-								<p class="pad_t20"><button class="btn_arr" type="button"><strong class="fs_sm">▶</strong></button><br>제거</p>
+								<p><button class="btn_arr" type="button"><strong class="fs_sm">▶</strong></button><br>추가</p>
+								<p class="pad_t20"><button class="btn_arr" type="button"><strong class="fs_sm">◀</strong></button><br>제거</p>
 							</div>
 						</div>
 						<div class="r_cont">
