--- a/어드민관리/admin_menu.html
+++ b/어드민관리/admin_menu.html
@@ -65,7 +65,8 @@
 						<p><button class="btn_sm_bg_grey" type="button" style="width:100%" id="myBtn">+ 메뉴 추가하기</button></p>
 						<div class="box_ln">
 							<ul>
-								<li><a href="#" class="on">시험관리</a></li>
+								<li><a href="#" class="on">시험관리<span class="fl_r"><button class="btn_sm_box" type="button">수정</button> 
+								<button class="btn_sm_box" type="button">삭제</button></span></a></li>
 								<li><a href="#">주니어단체</a></li>
 								<li><a href="#">CBT센터관리</a></li>
 								<li><a href="#">어학공통</a></li>
@@ -76,10 +77,9 @@
 								<li><a href="#">정산</a></li>
 							</ul>
 						</div>
-						<p class="item">
+						<p class="item fl_r">
 							<button class="btn_arr" type="button"><strong class="fs_sm">▲</strong></button>
 							<button class="btn_arr" type="button"><strong class="fs_sm">▼</strong></button>
-							<button class="btn_line btn_md fl_r" type="button">정렬순서 저장</button>
 						</p>
 					</div>
 				</li>
@@ -92,7 +92,8 @@
 						<p><button class="btn_sm_bg_grey" type="button" style="width:100%">+ 메뉴 추가하기</button></p>
 						<div class="box_ln">
 							<ul>
-								<li><a href="#" class="on">TOEIC</a></li>
+								<li><a href="#" class="on">TOEIC<span class="fl_r"><button class="btn_sm_box" type="button">수정</button> 
+								<button class="btn_sm_box" type="button">삭제</button></span></a></li>
 								<li><a href="#">TOEIC Speaking</a></li>
 								<li><a href="#">TOEFL ITP</a></li>
 								<li><a href="#">TOEIC Bridge</a></li>
@@ -107,10 +108,9 @@
 								<li><a href="#">KPE</a></li>
 							</ul>
 						</div>
-						<p class="item">
+						<p class="item fl_r">
 							<button class="btn_arr" type="button"><strong class="fs_sm">▲</strong></button>
 							<button class="btn_arr" type="button"><strong class="fs_sm">▼</strong></button>
-							<button class="btn_line btn_md fl_r" type="button">정렬순서 저장</button>
 						</p>
 					</div>
 				</li>
@@ -123,15 +123,15 @@
 						<p><button class="btn_sm_bg_grey" type="button" style="width:100%">+ 메뉴 추가하기</button></p>
 						<div class="box_ln">
 							<ul>
-								<li><a href="#" class="on">접수현황통계</a></li>
+								<li><a href="#" class="on">접수현황통계<span class="fl_r"><button class="btn_sm_box" type="button">수정</button> 
+								<button class="btn_sm_box" type="button">삭제</button></span></a></li>
 								<li><a href="#">접수관리</a></li>
 								<li><a href="#">시험세팅</a></li>
 							</ul>
 						</div>
-						<p class="item">
+						<p class="item fl_r">
 							<button class="btn_arr" type="button"><strong class="fs_sm">▲</strong></button>
 							<button class="btn_arr" type="button"><strong class="fs_sm">▼</strong></button>
-							<button class="btn_line btn_md fl_r" type="button">정렬순서 저장</button>
 						</p>
 					</div>
 				</li>
@@ -144,7 +144,8 @@
 						<p><button class="btn_sm_bg_grey" type="button" style="width:100%">+ 메뉴 추가하기</button></p>
 						<div class="box_ln">
 							<ul>
-								<li><a href="#" class="on">일별 접수통계</a></li>
+								<li><a href="#" class="on">일별 접수통계<span class="fl_r"><button class="btn_sm_box" type="button">수정</button> 
+								<button class="btn_sm_box" type="button">삭제</button></span></a></li>
 								<li><a href="#">월별 접수통계</a></li>
 								<li><a href="#">연도별 접수통계</a></li>
 								<li><a href="#">지역/고사장 현황</a></li>
@@ -156,10 +157,9 @@
 								<li><a href="#">(센터별 운영통계)</a></li>
 							</ul>
 						</div>
-						<p class="item">
+						<p class="item fl_r">
 							<button class="btn_arr" type="button"><strong class="fs_sm">▲</strong></button>
 							<button class="btn_arr" type="button"><strong class="fs_sm">▼</strong></button>
-							<button class="btn_line btn_md fl_r" type="button">정렬순서 저장</button>
 						</p>
 					</div>
 				</li>
