--- a/어드민관리/어드민관리_리스트.html
+++ b/어드민관리/어드민관리_리스트.html
@@ -66,7 +66,7 @@
       <td>메뉴관리</td>
       <td><a href="admin_menu.html" target="_blank">admin_menu.html</a></td>
       <td><span class="ing"></span></td>
-      <td class="memo"></td>
+      <td class="memo">메뉴추가하기 버튼 누르면 팝업 생성</td>
     </tr>
     
   </tbody>
